# avis-imgv

./: .gitignore  Cargo.toml  README.md  install.sh  keysout  settings.json  todo.md
.github/workflows/: rust.yml
docs/: changelog.md
examples/: config.json  config.yaml  copy-wayland.sh  copy.sh  keys.txt  rate.sh
icc/: licenses
resources/: licenses.txt
src/: app.rs  callback.rs  config.rs  crawler.rs  db.rs  dropdown.rs  filters.rs  gallery_image.rs  grid_view.rs  icc.rs  image.rs  image_store.rs  image_view.rs  lib.rs  main.rs  metadata.rs  multi_gallery.rs  navigator.rs  perf_metrics.rs  single_gallery.rs  theme.rs  thumbnail_image.rs  tree.rs  user_action.rs  utils.rs  worker.rs
