[package]
name = "avis-imgv"
description = "Image viewer based on egui. Makes use of modern RAM amounts by loading images ahead of time for very fast responsiveness. Minimal UI with heavy use of shortcuts."
license = "GPL-3.0"
homepage = "https://github.com/hats-np/avis-imgv"
repository = "https://github.com/hats-np/avis-imgv"
version = "0.3.2"
edition = "2021"
readme = "README.md"
keywords = ["image_viewer", "image"]

[dependencies]
eframe = { version = "0.33.0", features = ["wgpu"] }
epaint = { version = "0.33.0" }
image = { version = "0.25.6", default-features = true }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
directories = { version = "6.0.0" }
lcms2 = { version = "6.1.0" }
regex = { version = "1.11.1" }
rfd = { version = "0.15.3" }
fast_image_resize = { version = "5.1.4" }
notify = "8.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
jpegxl-rs = "0.11.2"
tempfile = "3.22.0"
tracing-subscriber = { version = "0.3", default-features = true }
tracing = "0.1.41"
itertools = "0.14.0"
pollster = "0.4.0"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.fast_image_resize]
opt-level = 3

[features]
default = ["custom_font"]
custom_font = []
