[package]
name = "avis-imgv"
description = "Image viewer based on egui. Makes use of modern RAM amounts by loading images ahead of time for very fast responsiveness. Minimal UI with heavy use of shortcuts."
license = "GPL-3.0"
homepage = "https://github.com/hats-np/avis-imgv"
repository = "https://github.com/hats-np/avis-imgv"
version = "0.3.2"
edition = "2024"
readme = "README.md"
keywords = ["image_viewer", "image"]

[dependencies]
eframe = { version = "0.34.1", features = ["wgpu"] }
epaint = { version = "0.34.1" }
image = { version = "0.25.10", default-features = true }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
directories = { version = "6.0.0" }
lcms2 = { version = "6.1.1" }
regex = { version = "1.12.3" }
rfd = { version = "0.17.2" }
fast_image_resize = { version = "6.0.0" }
notify = "8.2.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.23", features = ["v4"] }
jpegxl-rs = { version = "0.14.0", features = ["vendored"] }
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3", default-features = true }
tracing = "0.1.44"
itertools = "0.14.0"
r2d2_sqlite = "0.33.0"
r2d2 = "0.8.10"
rawler = "0.7.2"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.fast_image_resize]
opt-level = 3

[features]
default = ["custom_font"]
custom_font = []
